--- a/Student_management_app/templates/hod_template/home_content.html
+++ b/Student_management_app/templates/hod_template/home_content.html
@@ -1,4 +1,6 @@
-  <!-- Main content -->
+{% extends 'hod_template/base_template.html' %}
+{% block main_content  %}
+ <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
@@ -131,8 +133,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="{% static "dist/img/user1-128x128.jpg" %}" alt="message user image">
-
+                    <img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Is this template really for free? That's unbelievable!
@@ -148,7 +149,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="{% static "dist/img/user3-128x128.jpg" %}" alt="message user image">
+                    <img class="direct-chat-img" src="dist/img/user3-128x128.jpg" alt="message user image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       You better believe it!
@@ -164,7 +165,7 @@
                       <span class="direct-chat-timestamp float-right">23 Jan 5:37 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="{% static "dist/img/user1-128x128.jpg" %}" alt="message user image">
+                    <img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       Working with AdminLTE on a great new app! Wanna join?
@@ -180,7 +181,7 @@
                       <span class="direct-chat-timestamp float-left">23 Jan 6:10 pm</span>
                     </div>
                     <!-- /.direct-chat-infos -->
-                    <img class="direct-chat-img" src="{% static "dist/img/user3-128x128.jpg" %}" alt="message user image">
+                    <img class="direct-chat-img" src="dist/img/user3-128x128.jpg" alt="message user image">
                     <!-- /.direct-chat-img -->
                     <div class="direct-chat-text">
                       I would love to.
@@ -197,7 +198,7 @@
                   <ul class="contacts-list">
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user1-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user1-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -212,7 +213,7 @@
                     <!-- End Contact Item -->
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user7-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user7-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -227,7 +228,7 @@
                     <!-- End Contact Item -->
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user3-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user3-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -242,7 +243,7 @@
                     <!-- End Contact Item -->
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user5-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user5-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -257,7 +258,7 @@
                     <!-- End Contact Item -->
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user6-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user6-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -272,7 +273,7 @@
                     <!-- End Contact Item -->
                     <li>
                       <a href="#">
-                        <img class="contacts-list-img" src="{% static "dist/img/user8-128x128.jpg" %}">
+                        <img class="contacts-list-img" src="dist/img/user8-128x128.jpg">
 
                         <div class="contacts-list-info">
                           <span class="contacts-list-name">
@@ -588,3 +589,4 @@
       </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
+{% endblock main_content %}
