--- a/Student_management_app/templates/login_page.html
+++ b/Student_management_app/templates/login_page.html
@@ -47,11 +47,20 @@
             </div>
           </div>
         </div>
+          <div class="row">
           <!-- /.col -->
           <div class="col-xl-12">
             <button type="submit" class="btn btn-primary btn-block">Sign In</button>
           </div>
-</div>
+              {%  if messages %}
+              <div class="col-12">
+                  {%  for message in messages %}
+                      {%  if message.tags == 'error' %}
+                  <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
+                      {% endif %}
+                {% endfor %}
+              </div>
+              {% endif %}
 <!-- /.login-box -->
 
 <!-- jQuery -->
