--- a/Student_management_app/templates/hod_template/sidebar_template.html
+++ b/Student_management_app/templates/hod_template/sidebar_template.html
@@ -4,179 +4,141 @@
     <a href="index3.html" class="brand-link">
       <img src="{%static "dist/img/AdminLTELogo.png" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
-      <span class="brand-text font-weight-light">AdminLTE 3</span>
+      <span class="brand-text font-weight-light">DiscipulusHub</span>
     </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="{% static  "dist/img/user2-160x160.jpg" %}" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
-        </div>
-      </div>
+
 
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="./index.html" class="nav-link active">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v1</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="./index2.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v2</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="./index3.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v3</p>
-                </a>
-              </li>
-            </ul>
-          </li>
+
           <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="/add_staff" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Staff
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
                     <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="/add_staff" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Staff
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="/add_student" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Student
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
             </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="/add_student" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Student
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="/add_course" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
 
                 Add Course
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Course
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Subject
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                Manage Subject
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 View Attendance
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
         <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Staff
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
                     <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Feedback
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Feedback
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Leave
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="pages/add_staff.html" class="nav-link">
+            <a href="{{ add_staff }}.html" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Leave
-                <span class="right badge badge-danger">New</span>
+              
               </p>
             </a>
           </li>
