--- a/Student_management_app/templates/hod_template/sidebar_template.html
+++ b/Student_management_app/templates/hod_template/sidebar_template.html
@@ -25,11 +25,10 @@
             </a>
           </li>
                     <li class="nav-item">
-            <a href="/add_staff" class="nav-link">
+            <a href="/manage_staff" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Staff
-              
               </p>
             </a>
           </li>
@@ -43,7 +42,7 @@
             </a>
             </li>
             <li class="nav-item">
-            <a href="/add_student" class="nav-link">
+            <a href="/manage_student" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Student
@@ -62,7 +61,7 @@
             </a>
           </li>
             <li class="nav-item">
-            <a href="{{ add_staff }}.html" class="nav-link">
+            <a href="/manage_course" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Course
@@ -80,7 +79,7 @@
             </a>
           </li>
             <li class="nav-item">
-            <a href="{{ add_staff }}.html" class="nav-link">
+            <a href="/manage_subject" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
                Manage Subject
