--- a/Student_management_app/templates/hod_template/sidebar_template.html
+++ b/Student_management_app/templates/hod_template/sidebar_template.html
@@ -1,11 +1,22 @@
 {% load static %}
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
-      <img src="{%static "dist/img/AdminLTELogo.png" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+    <a href="/admin_home" class="brand-link">
+      <img src="{%static "dist/img/dc.jpg" %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
       <span class="brand-text font-weight-light">DiscipulusHub</span>
     </a>
+<!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user panel (optional) -->
+      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        <div class="image">
+          <img src="{% static "dist/img/admin_logo.png" %}" class="img-circle elevation-2" alt="User Image">
+        </div>
+        <div class="info">
+          <a href="#" class="d-block">{{ user.username }}</a>
+        </div>
+      </div>
 
 
 
@@ -20,7 +31,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Staff
-              
+
               </p>
             </a>
           </li>
@@ -37,7 +48,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Student
-              
+
               </p>
             </a>
             </li>
@@ -46,7 +57,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Student
-              
+
               </p>
             </a>
           </li>
@@ -56,7 +67,7 @@
               <p>
 
                 Add Course
-              
+
               </p>
             </a>
           </li>
@@ -65,7 +76,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Manage Course
-              
+
               </p>
             </a>
           </li>
@@ -74,7 +85,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Add Subject
-              
+
               </p>
             </a>
           </li>
@@ -83,7 +94,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                Manage Subject
-              
+
               </p>
             </a>
           </li>
@@ -92,7 +103,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 View Attendance
-              
+
               </p>
             </a>
           </li>
@@ -102,7 +113,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Feedback
-              
+
               </p>
             </a>
           </li>
@@ -111,7 +122,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Feedback
-              
+
               </p>
             </a>
           </li>
@@ -120,7 +131,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Leave
-              
+
               </p>
             </a>
           </li>
@@ -129,7 +140,7 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Leave
-              
+
               </p>
             </a>
           </li>
