--- a/Student_management_app/templates/hod_template/edit_student_template.html
+++ b/Student_management_app/templates/hod_template/edit_student_template.html
@@ -1,6 +1,6 @@
 {% extends 'hod_template/base_template.html' %}
 {% block page_title %}
-Add Student
+Edit Student |  Username : {{ username }} | #ID : {{ id }}
 {% endblock page_title %}
 {% block main_content %}
     <!-- Main content -->
@@ -11,13 +11,13 @@ Add Student
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Add Student</h3>
+                <h3 class="card-title">Edit Student</h3>
               </div>
+            </div>
               <!-- /.card-header -->
               <!-- form start -->
-                {% url 'add_student_save' as action_path %}
-                {% include 'hod_template/form_template.html' with messages=messages form=form action_path=action_path button_text="Add Student" %}
-            </div>
+                {% url 'edit_student_save' as action_path %}
+                {% include 'hod_template/form_template.html' with messages=messages form=form action_path=action_path button_text="Edit Student" %}
             <!-- /.card -->
 
 
