--- a/Student_management_app/templates/hod_template/manage_student_template.html
+++ b/Student_management_app/templates/hod_template/manage_student_template.html
@@ -45,7 +45,7 @@ Manage Student
                       <th>Action</th>
                     </tr>
                   </thead>
-                  <body>
+                  <tbody>
                   {% for student in students %}
                     <tr>
                       <td>{{ student.admin.id }}</td>
@@ -61,10 +61,10 @@ Manage Student
                       <td>{{ student.course_id.course_name }}</td>
                       <td>{{ student.admin.last_login }}</td>
                       <td>{{ student.admin.date_joined }}</td>
-                      <td><a href="/edit_student/{{ staff.admin.id }}" class="btn btn-success">Edit</a></td>
+                      <td><a href="{% url 'edit_student' student_id=student.admin.id %}" class="btn btn-success">Edit</a></td>
                     </tr>
                   {% endfor %}
-                  </body>
+                  </tbody>
                 </table>
               </div>
               <!-- /.card-body -->
