--- a/Student_management_app/templates/hod_template/sidebar_template.html
+++ b/Student_management_app/templates/hod_template/sidebar_template.html
@@ -140,20 +140,20 @@
             </a>
           </li>
            <li class="nav-item">
-            <a href="{% url 'add_staff' %}" class="nav-link">
+               {% url 'student_leave_view' as student_leave_view %}
+            <a href="{% url 'student_leave_view' %}" class="nav-link {% if request.path == student_leave_view %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Student Leave
-                <span class="right badge badge-danger">New</span>
               </p>
             </a>
           </li>
             <li class="nav-item">
-            <a href="{% url 'add_staff' %}" class="nav-link">
+                 {% url 'staff_leave_view' as staff_leave_view %}
+            <a href="{% url 'staff_leave_view' %}" class="nav-link {% if request.path == staff_leave_view %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Staff Leave
-                <span class="right badge badge-danger">New</span>
               </p>
             </a>
           </li>
