--- a/Student_management_app/templates/hod_template/home_content.html
+++ b/Student_management_app/templates/hod_template/home_content.html
@@ -11,14 +11,10 @@
 		<link rel="stylesheet" type="text/css" href="{% static "style.css"  %}" media="all" >
 		<link href='http://fonts.googleapis.com/css?family=The+Girl+Next+Door' rel='stylesheet' type='text/css'>
 		<title>Cork board</title>
-<style>
-   body{
-     background: url("cork_board.gif");
-     }
-</style>
+
 	</head>
 
-	<body>
+	<body id="bg" style="background-image: url('{% static cork_board.gif %}');">
 
 		<div id='frame'>
 			<a class="note sticky1">
