--- a/Student_management_app/static/style.css
+++ b/Student_management_app/static/style.css
@@ -1,6 +1,6 @@
 
 div#frame { 
-	background: url(black.jpg) no-repeat;
+	background: url(cork_board.gif) no-repeat;
 	width: 800px;
 	height: 600px;
 	padding-top: 35px;
