--- a/Student_management_app/templates/hod_template/sidebar_template.html
+++ b/Student_management_app/templates/hod_template/sidebar_template.html
@@ -112,16 +112,16 @@
               </p>
             </a>
           </li>
-           <li class="nav-item">
-             <a href="{% url 'add_staff' %}" class="nav-link">
+
+ <li class="nav-item">
+            {% url 'admin_view_attendance' as admin_view_attendance %}
+             <a href="{% url 'admin_view_attendance' %}" class="nav-link {% if request.path == admin_view_attendance %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 View Attendance
-                <span class="right badge badge-danger">New</span>
               </p>
             </a>
           </li>
-
            <li class="nav-item">
                {% url 'student_leave_view' as student_leave_view %}
             <a href="{% url 'student_leave_view' %}" class="nav-link {% if request.path == student_leave_view %} active {% endif %}">
