--- a/Student_management_app/templates/hod_template/home_content.html
+++ b/Student_management_app/templates/hod_template/home_content.html
@@ -9,7 +9,7 @@
    {% load static %}
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="{% static "style.css"  %}" media="all" >
-		<link href='http://fonts.googleapis.com/css?family=The+Girl+Next+Door' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Mono:wght@100&family=Roboto:wght@100&display=swap' rel='stylesheet' type='text/css'>
 		<title>Cork board</title>
 
 	</head>
@@ -19,51 +19,51 @@
 	 	<div id='frame'>
 			<a class="note sticky1">
 				<div class='pin'></div>
-				<div class='text'>Sed ut perspiciatis unde omnis iste natus error sit.</div>
+				<div class='text'>15th September-Project Presentation.</div>
 			</a>
 			<a class="note sticky2">
 				<div class='pin'></div>
-				<div class='text'>Ut labore et dolo</div>
+				<div class='text'>16th-18th September-Tentative 3rd Theory Internals</div>
 			</a>
 			<a class="note sticky1">
 				<div class='pin'></div>
-				<div class='text'>At vero eos et accusamus et iusto odio dignissimo</div>
+				<div class='text'>22nd-24th September-Tentative 2nd Lab Internals</div>
 			</a>
 			<a class="note sticky3">
 				<div class='pin'></div>
-				<div class='text'>Blanditiis praesentium voluptatum deleniti atque</div>
+				<div class='text'>27th September-Last Working day for MCA 2nd Sem</div>
 			</a>
 			<a class="note sticky4">
 				<div class='pin'></div>
-				<div class='text'>Nam libero tempore, cum soluta nobis est !<br> x x</div>
+				<div class='text'>1st August 2021-3rd Sem starts<br></div>
 			</a>
 			<a class="note sticky3">
 				<div class='pin'></div>
-				<div class='text'>Temporibus autem</div>
+				<div class='text'>2nd Sem MCA Timetable</div>
 			</a>
 			<a class="note sticky1">
 				<div class='pin'></div>
-				<div class='text'>Itaque earum rerum hic tenetur a sapiente </div>
+				<div class='text'>3rd Sem MCA Timetable </div>
 			</a>
 			<a class="note sticky3">
 				<div class='pin'></div>
-				<div class='text'>Soluptatibus maiores.</div>
+				<div class='text'>List of students absent during 1st internals</div>
 			</a>
 			<a class="note sticky0">
 				<div class='pin'></div>
-				<div class='text'>Perferendis doloribus asperiores repella.</div>
+				<div class='text'>List of students absent during 2nd internals</div>
 			</a>
             <a class="note sticky1">
 				<div class='pin'></div>
-				<div class='text'>Itaque earum rerum hic tenetur a sapiente </div>
+				<div class='text'>No. of Placed Students:1:H Kishan</div>
 			</a>
 			<a class="note sticky3">
 				<div class='pin'></div>
-				<div class='text'>Soluptatibus maiores.</div>
+				<div class='text'>Staff Details</div>
 			</a>
 			<a class="note sticky0">
 				<div class='pin'></div>
-				<div class='text'>Perferendis doloribus asperiores repella.</div>
+				<div class='text'>Student Details</div>
 			</a>
 		</div>
 	</body>
