--- a/Student_management_app/templates/login_page.html
+++ b/Student_management_app/templates/login_page.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static "css/util.css" %}">
 	<link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
 <!--===============================================================================================-->
+
 </head>
 <body>
 
@@ -52,28 +53,30 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
-
+                <div class="input-group mb-3">
+                     <div class="g-recaptcha" data-sitekey="6LfeyGgcAAAAABWRBHDk0bpZJe8l15_slXbGOAKg"></div>
+                </div>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Login
 						</button>
 					</div>
 
-					<div class="text-center p-t-12">
+				<!--	<div class="text-center p-t-12">
 						<span class="txt1">
 							Forgot
 						</span>
 						<a class="txt2" href="#">
 							Username / Password?
 						</a>
-					</div>
+					</div>-->
 
-					<div class="text-center p-t-136">
+					<!--<div class="text-center p-t-136">
 						<a class="txt2" href="#">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
-					</div>
+					</div>-->
                      {%  if messages %}
               <div class="col-12">
                   {%  for message in messages %}
@@ -107,6 +110,7 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static "js/main.js" %}"></script>
+ <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </body>
 </html>
